5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4180/executions/1807_2563.log
== TEST (2019-06-04 17:44:51) 
-- CODE:
from numpy import*

vet = array(eval(input("Medias finais: ")))

while(size(vet)>1)


-- ERROR:
File "XXXX", line 5
    while(size(vet)>1)
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 17:44:55) 
-- CODE:
from numpy import*

vet = array(eval(input("Medias finais: ")))

while(size(vet)>1):
	


-- ERROR:
File "XXXX", line 8
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 17:48:33) 
-- CODE:
from numpy import*

vet = array(eval(input("Medias finais: ")))

while(size(vet)>1):
	aprov = 0
	
for elemento in vet:
	id
	
	
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 17:48:44) 
-- CODE:
from numpy import*

vet = array(eval(input("Medias finais: ")))

while(size(vet)>1):
	aprov = 0
	
for elemento in vet:
	
	
	
	


-- ERROR:
File "XXXX", line 14
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 17:48:48) 
-- CODE:
from numpy import*

vet = array(eval(input("Medias finais: ")))

while(size(vet)>1):
	aprov = 0
	
for elemento in vet:
	id
	
	
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 17:48:56) 
-- CODE:
from numpy import*

vet = array(eval(input("Medias finais: ")))

while(size(vet)>1):
	aprov = 0
	
for elemento in vet:
	id
	
	
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 17:49:05) 
-- CODE:
from numpy import*

vet = array(eval(input("Medias finais: ")))

while(size(vet)>1):
	aprov = 0
	
for elemento in vet:
	id
	
	
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 17:54:21) 
-- CODE:
from numpy import*

vet = array(eval(input("Medias finais: ")))

while(size(vet)>1):
	aprov = 0
	
for elemento in vet:
	if (elemento == 5 and elemento < 7):
		elemento = elemento + 1
		
		print(elemento)
		
vet = array(eval(input("Proximo vetor:")))
	
	
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 17:54:43) 
-- CODE:
from numpy import*

vet = array(eval(input("Medias finais: ")))

while(size(vet)>1):
	aprov = 0
	
for elemento in vet:
	if (elemento == 5 and elemento < 7):
		elemento = elemento + 1
		
		print(elemento)
		
vet = array(eval(input("Proximo vetor:")))
	
	
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 17:55:02) 
-- CODE:
from numpy import*

vet = array(eval(input("Medias finais: ")))

while(size(vet)>1):
	aprov = 0
	
for elemento in vet:
	if (elemento == 5 and elemento < 7):
		elemento = elemento + 1
		
	print(elemento)
		
vet = array(eval(input("Proximo vetor:")))
	
	
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 17:55:24) 
-- CODE:
from numpy import*

vet = array(eval(input("Medias finais: ")))

while(size(vet)>1):
aprov = 0
	
for elemento in vet:
	if (elemento == 5 and elemento < 7):
		elemento = elemento + 1
		
	print(elemento)
		
vet = array(eval(input("Proximo vetor:")))
	
	
	


-- ERROR:
File "XXXX", line 6
    aprov = 0
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 17:55:28) 
-- CODE:
from numpy import*

vet = array(eval(input("Medias finais: ")))

while(size(vet)>1):
	aprov = 0
	
for elemento in vet:
	if (elemento == 5 and elemento < 7):
		elemento = elemento + 1
		
	print(elemento)
		
vet = array(eval(input("Proximo vetor:")))
	
	
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 17:55:53) 
-- CODE:
from numpy import*

vet = array(eval(input("Medias finais: ")))

while(size(vet)>1):
	aprov = 0
	
for elemento in vet:
	if (elemento >= 5 and elemento < 7):
		elemento = elemento + 1
		
	print(elemento)
		
vet = array(eval(input("Proximo vetor:")))
	
	
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 17:56:13) 
-- CODE:
from numpy import*

vet = array(eval(input("Medias finais: ")))

while(size(vet)>1):
	aprov = 0
	
for elemento in vet:
	if (elemento >= 5 and elemento < 7):
		elemento = elemento + 1
		
	print(elemento)
		
	vet = array(eval(input("Proximo vetor:")))
	
	
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 17:56:33) 
-- CODE:
from numpy import*

vet = array(eval(input("Medias finais: ")))

while(size(vet)>1):
	aprov = 0
	
for elemento in vet:
	if (elemento >= 5 and elemento < 7):
	elemento = elemento + 1
		
	print(elemento)
		
	vet = array(eval(input("Proximo vetor:")))
	
	
	


-- ERROR:
File "XXXX", line 10
    elemento = elemento + 1
           ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 17:56:43) 
-- CODE:
from numpy import*

vet = array(eval(input("Medias finais: ")))

while(size(vet)>1):
	aprov = 0
	
for elemento in vet:
	if (elemento >= 5 and elemento < 7):
	elemento = elemento + 1
		
	print(elemento)
		
	vet = array(eval(input("Proximo vetor:")))
	
	
	


-- ERROR:
File "XXXX", line 10
    elemento = elemento + 1
           ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-04 17:56:52) 
-- CODE:
from numpy import*

vet = array(eval(input("Medias finais: ")))

while(size(vet)>1):
	aprov = 0
	
for elemento in vet:
	if (elemento >= 5 and elemento < 7):
	elemento = elemento + 1
		
	print(elemento)
		
	vet = array(eval(input("Proximo vetor:")))
	
	
	


-- EXECUTION TIME:
3.83651
-- ERROR:
  File "/home/codebench/codes/1807/2563/main.py", line 10
    elemento = elemento + 1
           ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 17:57:02) 
-- CODE:
from numpy import*

vet = array(eval(input("Medias finais: ")))

while(size(vet)>1):
	aprov = 0
	
for elemento in vet:
	if (elemento >= 5 and elemento < 7):
	elemento = elemento + 1
		
	print(elemento)
		
	vet = array(eval(input("Proximo vetor:")))
	
	
	


-- ERROR:
File "XXXX", line 10
    elemento = elemento + 1
           ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 17:57:06) 
-- CODE:
from numpy import*

vet = array(eval(input("Medias finais: ")))

while(size(vet)>1):
	aprov = 0
	
for elemento in vet:
	if (elemento >= 5 and elemento < 7):
		elemento = elemento + 1
		
	print(elemento)
		
	vet = array(eval(input("Proximo vetor:")))
	
	
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 17:57:26) 
-- CODE:
from numpy import*

vet = array(eval(input("Medias finais: ")))

while(size(vet)>1):
	aprov = 0
	
for elemento in vet:
	if (elemento >= 5 and elemento < 7):
		elemento = elemento + 1
		
	print(elemento)
		
	vet = array(eval(input("Proximo vetor:")))
	
	
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 17:58:54) 
-- CODE:
from numpy import*

vet = array(eval(input("Medias finais: ")))

while(size(vet)>1):
	aprov = 0
	
for aprovado in vet:
	if (aprovado >= 5 and aprovado < 7):
		aprovado = aprovado + 1
		
	print(aprovado)
		
	vet = array(eval(input("Proximo vetor:")))
	
	
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 17:59:40) 
-- CODE:
from numpy import*

vet = array(eval(input("Medias finais: ")))

while(size(vet)>1):
	aprov = 0
	
for aprovado in vet:
	if (aprovado >= 5 and aprovado < 7):
		aprovado = aprovado + 1
		
	print(aprovado)
		
	vet = array(eval(input("Proximo vetor:")))
	
	
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 18:00:02) 
-- CODE:
from numpy import*

vet = array(eval(input("Medias finais: ")))

while(size(vet)>1):
	aprov = 0
	
for aprovado in vet:
	if (aprovado >= 5 or aprovado < 7):
		aprovado = aprovado + 1
		
	print(aprovado)
		
	vet = array(eval(input("Proximo vetor:")))
	
	
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 18:00:08) 
-- CODE:
from numpy import*

vet = array(eval(input("Medias finais: ")))

while(size(vet)>1):
	aprov = 0
	
for aprovado in vet:
	if (aprovado >= 5 or aprovado < 7):
		aprovado = aprovado + 1
		
	print(aprovado)
		
	vet = array(eval(input("Proximo vetor:")))
	
	
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 18:00:56) 
-- CODE:
from numpy import*

vet = array(eval(input("Medias finais: ")))

while(size(vet)>1):
	aprov = 0
	
for aprovado in vet:
	if (aprovado >= 5 and aprovado > 7):
		aprovado = aprovado + 1
		
	print(aprovado)
		
	vet = array(eval(input("Proximo vetor:")))
	
	
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 18:01:27) 
-- CODE:
from numpy import*

vet = array(eval(input("Medias finais: ")))

while(size(vet)>1):
	aprov = 0
	
for aprovado in vet:
	if (aprovado >= 5 and aprovado < 7):
		aprovado = aprovado + 1
		
	print(aprovado)
		
	vet = array(eval(input("Proximo vetor:")))
	
	
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 18:02:02) 
-- CODE:
from numpy import*

vet = array(eval(input("Medias finais: ")))

while(size(vet)>1):
	aprov = 0
	
for aprovado in vet:
	if (aprovado >= 5 and aprovado < 7):
		aprovado = aprovado + 1
		
	print(aprovado)
		
	vet = array(eval(input("Proximo vetor:")))
	
	
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 18:05:39) 
-- CODE:
from numpy import*

vet = array(eval(input("Medias finais: ")))

while(size(vet)>1):
	aprov = 0
	
for aprovado in vet:
	if (aprovado >= 5 and aprovado < 7):
		aprovado = aprovado + 1
		
	print(aprovado)
		
vet = array(eval(input("Proximo vetor:")))
	
	
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-04 19:21:01) 
-- CODE:
from numpy import*

vet = array(eval(input("Medias finais: ")))

while(size(vet)>1):
	aprov = 0
	
for elemento in vet:
	id
	
	
	


-- EXECUTION TIME:
1211.28
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-04 19:24:01) 
-- CODE:
from numpy import*

vet = array(eval(input("Medias finais: ")))

while(size(vet)>1):
	aprov = 0
	
for elemento in vet:
	id
	
	
	


-- EXECUTION TIME:
1261.64
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-04 19:34:01) 
-- CODE:
from numpy import*

vet = array(eval(input("Medias finais: ")))

while(size(vet)>1):
	aprov = 0
	
for elemento in vet:
	if (elemento == 5 and elemento < 7):
		elemento = elemento + 1
		
		print(elemento)
		
vet = array(eval(input("Proximo vetor:")))
	
	
	


-- EXECUTION TIME:
1896.23
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-04 19:38:02) 
-- CODE:
from numpy import*

vet = array(eval(input("Medias finais: ")))

while(size(vet)>1):
	aprov = 0
	
for aprovado in vet:
	if (aprovado >= 5 and aprovado < 7):
		aprovado = aprovado + 1
		
	print(aprovado)
		
	vet = array(eval(input("Proximo vetor:")))
	
	
	


-- EXECUTION TIME:
2028.67
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-04 19:40:01) 
-- CODE:
from numpy import*

vet = array(eval(input("Medias finais: ")))

while(size(vet)>1):
	aprov = 0
	
for aprovado in vet:
	if (aprovado >= 5 or aprovado < 7):
		aprovado = aprovado + 1
		
	print(aprovado)
		
	vet = array(eval(input("Proximo vetor:")))
	
	
	


-- EXECUTION TIME:
2275.44
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-04 19:41:01) 
-- CODE:
from numpy import*

vet = array(eval(input("Medias finais: ")))

while(size(vet)>1):
	aprov = 0
	
for aprovado in vet:
	if (aprovado >= 5 and aprovado < 7):
		aprovado = aprovado + 1
		
	print(aprovado)
		
vet = array(eval(input("Proximo vetor:")))
	
	
	


-- EXECUTION TIME:
2114.4
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 15:51:56) 
-- CODE:
from numpy import*

vet = array(eval(input("Medias finais: ")))

while(size(vet)>1):
	aprov = 0
	
for aprovado in vet:
	if (aprovado[i] >= 5 and aprovado[i] < 7):
		aprovado = aprovado + 1
		
	print(aprovado)
		
vet = array(eval(input("Proximo vetor:")))
	
	
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 15:51:58) 
-- CODE:
from numpy import*

vet = array(eval(input("Medias finais: ")))

while(size(vet)>1):
	aprov = 0
	
for aprovado in vet:
	if (aprovado[i] >= 5 and aprovado[i] < 7):
		aprovado = aprovado + 1
		
	print(aprovado)
		
vet = array(eval(input("Proximo vetor:")))
	
	
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 15:53:07) 
-- CODE:
from numpy import*

vet = array(eval(input("Medias finais: ")))

while(size(vet)>1):
	aprov = 0
	
for aprovado in vet:
	if (aprovado <= 5 and aprovado < 7):
		aprovado = aprovado + 1
		
	print(aprovado)
		
vet = array(eval(input("Proximo vetor:")))
	
	
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 15:53:11) 
-- CODE:
from numpy import*

vet = array(eval(input("Medias finais: ")))

while(size(vet)>1):
	aprov = 0
	
for aprovado in vet:
	if (aprovado <= 5 and aprovado < 7):
		aprovado = aprovado + 1
		
	print(aprovado)
		
vet = array(eval(input("Proximo vetor:")))
	
	
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 15:53:21) 
-- CODE:
from numpy import*

vet = array(eval(input("Medias finais: ")))

while(size(vet)>1):
	aprov = 0
	
for aprovado in vet:
	if (aprovado <= 5 and aprovado < 7):
		aprovado = aprovado + 1
		
	print(aprovado)
		
	vet = array(eval(input("Proximo vetor:")))
	
	
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 15:53:26) 
-- CODE:
from numpy import*

vet = array(eval(input("Medias finais: ")))

while(size(vet)>1):
	aprov = 0
	
for aprovado in vet:
	if (aprovado <= 5 and aprovado < 7):
		aprovado = aprovado + 1
		
	print(aprovado)
		
	vet = array(eval(input("Proximo vetor:")))
	
	
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 15:53:45) 
-- CODE:
from numpy import*

vet = array(eval(input("Medias finais: ")))

while(size(vet)>1):
	aprov = 0
	
	for aprovado in vet:
	if (aprovado <= 5 and aprovado < 7):
		aprovado = aprovado + 1
		
	print(aprovado)
		
	vet = array(eval(input("Proximo vetor:")))
	
	
	


-- ERROR:
File "XXXX", line 9
    if (aprovado <= 5 and aprovado < 7):
     ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 15:53:50) 
-- CODE:
from numpy import*

vet = array(eval(input("Medias finais: ")))

while(size(vet)>1):
	aprov = 0
	
	for aprovado in vet:
		if (aprovado <= 5 and aprovado < 7):
		aprovado = aprovado + 1
		
	print(aprovado)
		
	vet = array(eval(input("Proximo vetor:")))
	
	
	


-- ERROR:
File "XXXX", line 10
    aprovado = aprovado + 1
           ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 15:53:57) 
-- CODE:
from numpy import*

vet = array(eval(input("Medias finais: ")))

while(size(vet)>1):
	aprov = 0
	
	for aprovado in vet:
		if (aprovado <= 5 and aprovado < 7):
			aprovado = aprovado + 1
		
	print(aprovado)
		
	vet = array(eval(input("Proximo vetor:")))
	
	
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 15:54:02) 
-- CODE:
from numpy import*

vet = array(eval(input("Medias finais: ")))

while(size(vet)>1):
	aprov = 0
	
	for aprovado in vet:
		if (aprovado <= 5 and aprovado < 7):
			aprovado = aprovado + 1
		
	print(aprovado)
		
	vet = array(eval(input("Proximo vetor:")))
	
	
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 15:54:18) 
-- CODE:
from numpy import*

vet = array(eval(input("Medias finais: ")))

while(size(vet)>1):
	aprov = 0
	
	for aprovado in vet:
		if (aprovado <= 5 and aprovado < 7):
			aprovado = aprovado + 1
		
	print(aprovado)
		
	vet = array(eval(input("Proximo vetor:")))
	
	
	


-- EXECUTION TIME:
6.21663
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
Medias finais: 5.2
Proximo vetor:3.9
Proximo vetor:6.7
Proximo vetor:7.0
Proximo vetor:
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
Medias finais: 6.2
Proximo vetor:5.4
Proximo vetor:7.2
Proximo vetor:
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:
Medias finais: 6.3
Proximo vetor:6.0
Proximo vetor:
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 15:54:38) 
-- CODE:
from numpy import*

vet = array(eval(input("Medias finais: ")))

while(size(vet)>1):
	
	aprov = 0
	
for aprovado in vet:
	if (aprovado <= 5 and aprovado < 7):
		aprovado = aprovado + 1
		
	print(aprovado)
		
vet = array(eval(input("Proximo vetor:")))
	
	
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 15:54:44) 
-- CODE:
from numpy import*

vet = array(eval(input("Medias finais: ")))

while(size(vet)>1):
	
	aprov = 0
	
for aprovado in vet:
	if (aprovado <= 5 and aprovado < 7):
		aprovado = aprovado + 1
		
	print(aprovado)
		
vet = array(eval(input("Proximo vetor:")))
	
	
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 15:55:01) 
-- CODE:
from numpy import*

vet = array(eval(input("Medias finais: ")))

while(size(vet)>1):
	
	aprov = 0
	
for aprovado in vet:
	if (aprovado <= 5 and aprovado < 7):
		aprovado = aprovado + 1
		
	print(aprovado)
		
vet = array(eval(input("Proximo vetor:")))
	
	
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 15:55:21) 
-- CODE:
from numpy import*

vet = array(eval(input("Medias finais: ")))

while(size(vet)>1):
	
	aprov = 0
	
for aprovado in vet:
	if (aprovado <= 5 and aprovado < 7):
		aprovado = aprovado + 1
		
	print(aprovado)
		
vet = array(eval(input("Proximo vetor:")))
	
	
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 15:55:33) 
-- CODE:
from numpy import*

vet = array(eval(input("Medias finais: ")))

while(size(vet)>1):
	
	aprov = 0
	
	for aprovado in vet:
		if (aprovado <= 5 and aprovado < 7):
		aprovado = aprovado + 1
		
	print(aprovado)
		
vet = array(eval(input("Proximo vetor:")))
	
	
	


-- ERROR:
File "XXXX", line 11
    aprovado = aprovado + 1
           ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 15:55:38) 
-- CODE:
from numpy import*

vet = array(eval(input("Medias finais: ")))

while(size(vet)>1):
	
	aprov = 0
	
	for aprovado in vet:
		if (aprovado <= 5 and aprovado < 7):
			aprovado = aprovado + 1
		
	print(aprovado)
		
vet = array(eval(input("Proximo vetor:")))
	
	
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 15:55:42) 
-- CODE:
from numpy import*

vet = array(eval(input("Medias finais: ")))

while(size(vet)>1):
	
	aprov = 0
	
	for aprovado in vet:
		if (aprovado <= 5 and aprovado < 7):
			aprovado = aprovado + 1
		
	print(aprovado)
		
	vet = array(eval(input("Proximo vetor:")))
	
	
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 15:56:23) 
-- CODE:
from numpy import*

vet = array(eval(input("Medias finais: ")))

while(size(vet)>1):
	
	aprov = 0
	
	for aprovado in vet:
		if (aprovado <= 5 and aprovado < 7):
			aprovado = aprovado + 1
		
	print(aprovado)
		
	vet = array(eval(input("Proximo vetor:")))
	
	
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 15:57:31) 
-- CODE:
from numpy import*

vet = array(eval(input("Medias finais: ")))

while(size(vet)>1):
	
	aprov = 0
	
	for elemento in vet:
		if (elemento <= 5 and elemento < 7):
			aprov = aprov + 1
		
	print(aprov)
		
	vet = array(eval(input("Proximo vetor:")))
	
	
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 15:58:03) 
-- CODE:
from numpy import*

vet = array(eval(input("Medias finais: ")))

while(size(vet)>1):
	
	aprov = 0
	
	for elemento in vet:
		if (elemento <= 5 and elemento < 7):
			aprov = aprov + 1
		
	print(aprov)
		
	vet = array(eval(input("Proximo vetor:")))
	
	
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 15:58:58) 
-- CODE:
from numpy import*

vet = array(eval(input("Medias finais: ")))

while(size(vet)>1):
	
	aprov = 0
	
	for elemento in vet:
		if (elemento <= 5 and elemento < 7):
			aprov = aprov + 1
		
	print(aprov)
		
	vet = array(eval(input("Proximo vetor:")))
	
	
	


-- EXECUTION TIME:
11.3705
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
0
5
2
5
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
0
5
2
5
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:
0
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 15:59:07) 
-- CODE:
from numpy import*

vet = array(eval(input("Medias finais: ")))

while(size(vet)>1):
	
	aprov = 0
	
	for elemento in vet:
		if (elemento <= 5 and elemento < 7):
			aprov = aprov + 1
		
	print(aprov)
		
	vet = array(eval(input("Proximo vetor:")))
	
	
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 15:59:08) 
-- CODE:
from numpy import*

vet = array(eval(input("Medias finais: ")))

while(size(vet)>1):
	
	aprov = 0
	
	for elemento in vet:
		if (elemento <= 5 and elemento < 7):
			aprov = aprov + 1
		
	print(aprov)
		
	vet = array(eval(input("Proximo vetor:")))
	
	
	


-- EXECUTION TIME:
14.6551
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
0
5
2
5
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
0
3
0
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:
0
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 15:59:34) 
-- CODE:
from numpy import*

vet = array(eval(input("Medias finais: ")))

while(size(vet)>1):
	
	aprov = 0
	
	for elemento in vet:
		if (elemento <= 5 and elemento < 7):
			aprov = aprov + 1
		
	print(aprov)
		
	vet = array(eval(input("Proximo vetor:")))
	
	
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 15:59:57) 
-- CODE:
from numpy import*

vet = array(eval(input("Medias finais: ")))

while(size(vet)>1):
	
	aprov = 0
	
	for elemento in vet:
		if (elemento <= 5 and elemento < 7):
			aprov = aprov + 1
		
	print(aprov)
		
	vet = array(eval(input("Proximo vetor:")))
	
	
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:00:05) 
-- CODE:
from numpy import*

vet = array(eval(input("Medias finais: ")))

while(size(vet)>1):
	
	aprov = 0
	
	for elemento in vet:
		if (elemento <= 5 and elemento < 7):
			aprov = aprov + 1
		
	print(aprov)
		
	vet = array(eval(input("Proximo vetor:")))
	
	
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:00:58) 
-- CODE:
from numpy import*

vet = array(eval(input("Medias finais: ")))

while(size(vet)>1):
	
	aprov = 0
	
	for elemento in vet:
		if (5<= elemento > 7):
			aprov = aprov + 1
		
	print(aprov)
		
	vet = array(eval(input("Proximo vetor:")))
	
	
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:01:06) 
-- CODE:
from numpy import*

vet = array(eval(input("Medias finais: ")))

while(size(vet)>1):
	
	aprov = 0
	
	for elemento in vet:
		if (5<= elemento > 7):
			aprov = aprov + 1
		
	print(aprov)
		
	vet = array(eval(input("Proximo vetor:")))
	
	
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:01:50) 
-- CODE:
from numpy import*

vet = array(eval(input("Medias finais: ")))

while(size(vet)>1):
	
	aprov = 0
	
	for elemento in vet:
		if (5 <= elemento > 7):
			aprov = aprov + 1
		
	print(aprov)
		
	vet = array(eval(input("Proximo vetor:")))
	
	
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 16:01:53) 
-- CODE:
from numpy import*

vet = array(eval(input("Medias finais: ")))

while(size(vet)>1):
	
	aprov = 0
	
	for elemento in vet:
		if (5<= elemento > 7):
			aprov = aprov + 1
		
	print(aprov)
		
	vet = array(eval(input("Proximo vetor:")))
	
	
	


-- EXECUTION TIME:
9.47216
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
0
4
4
1
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
0
0
8
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:
Medias finais: 2
Proximo vetor:2
Proximo vetor:
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:02:21) 
-- CODE:
from numpy import*

vet = array(eval(input("Medias finais: ")))

while(size(vet)>1):
	
	aprov = 0
	
	for elemento in vet:
		if (5 <= elemento > 7):
			aprov = aprov + 1
		
	print(aprov)
		
	vet = array(eval(input("Proximo vetor:")))
	
	
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 16:05:43) 
-- CODE:
from numpy import*

vet = array(eval(input("Medias finais: ")))

while(size(vet)>1):
	
	aprov = 0
	
	for elemento in vet:
		if (5 <= elemento < 7):
			aprov = aprov + 1
		
	print(aprov)
		
	vet = array(eval(input("Proximo vetor:")))
	
	
	


-- EXECUTION TIME:
10.84
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
Medias finais: 6
Proximo vetor:0
Proximo vetor:3
Proximo vetor:1
Proximo vetor:
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
6
0
3
1
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:
5
3
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:05:43) 
-- CODE:
from numpy import*

vet = array(eval(input("Medias finais: ")))

while(size(vet)>1):
	
	aprov = 0
	
	for elemento in vet:
		if (5 <= elemento < 7):
			aprov = aprov + 1
		
	print(aprov)
		
	vet = array(eval(input("Proximo vetor:")))
	
	
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:05:43) 
-- CODE:
from numpy import*

vet = array(eval(input("Medias finais: ")))

while(size(vet)>1):
	
	aprov = 0
	
	for elemento in vet:
		if (5 <= elemento < 7):
			aprov = aprov + 1
		
	print(aprov)
		
	vet = array(eval(input("Proximo vetor:")))
	
	
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 16:05:55) 
-- CODE:
from numpy import*

vet = array(eval(input("Medias finais: ")))

while(size(vet)>1):
	
	aprov = 0
	
	for elemento in vet:
		if (5 <= elemento < 7):
			aprov = aprov + 1
		
	print(aprov)
		
	vet = array(eval(input("Proximo vetor:")))
	
	
	


-- EXECUTION TIME:
13.601
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
6
0
3
1
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
Medias finais: 11
Proximo vetor:4
Proximo vetor:1
Proximo vetor:
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:
Medias finais: 5
Proximo vetor:3
Proximo vetor:
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:06:40) 
-- CODE:
from numpy import*

vet = array(eval(input("Medias finais: ")))

while(size(vet)>1):
	
	aprov = 0
	
	for elemento in vet:
		if (5 <= elemento < 7):
			aprov = aprov + 1
		
	print(aprov)
		
	vet = array(eval(input("Proximo vetor:")))
	
	
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:06:40) 
-- CODE:
from numpy import*

vet = array(eval(input("Medias finais: ")))

while(size(vet)>1):
	
	aprov = 0
	
	for elemento in vet:
		if (5 <= elemento < 7):
			aprov = aprov + 1
		
	print(aprov)
		
	vet = array(eval(input("Proximo vetor:")))
	
	
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:06:50) 
-- CODE:
from numpy import*

vet = array(eval(input("Medias finais: ")))

while(size(vet)>1):
	
	aprov = 0
	
	for elemento in vet:
		if (5 <= elemento < 7):
			aprov = aprov + 1
		
	print(aprov)
		
	vet = array(eval(input("Proximo vetor:")))
	
	
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:07:18) 
-- CODE:
from numpy import*

vet = array(eval(input("Medias finais: ")))

while(size(vet)>1):
	
	aprov = 0
	
	for elemento in vet:
		if (5 <= elemento < 7):
			aprov = aprov + 1
		
	print(aprov)
		
	vet = array(eval(input("Proximo vetor:")))
	
	
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:07:40) 
-- CODE:
from numpy import*

vet = array(eval(input("Medias finais: ")))

while(size(vet)>1):
	
	aprov = 0
	
	for elemento in vet:
		if (5 <= elemento < 7):
			aprov = aprov + 1
		
	print(aprov)
		
	vet = array(eval(input("Proximo vetor:")))
	
	
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 16:07:49) 
-- CODE:
from numpy import*

vet = array(eval(input("Medias finais: ")))

while(size(vet)>1):
	
	aprov = 0
	
	for elemento in vet:
		if (5 <= elemento < 7):
			aprov = aprov + 1
		
	print(aprov)
		
	vet = array(eval(input("Proximo vetor:")))
	
	
	


-- EXECUTION TIME:
9.05361
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
6
0
3
1
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
11
4
1
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:
6
0
3
1
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:07:49) 
-- CODE:
from numpy import*

vet = array(eval(input("Medias finais: ")))

while(size(vet)>1):
	
	aprov = 0
	
	for elemento in vet:
		if (5 <= elemento < 7):
			aprov = aprov + 1
		
	print(aprov)
		
	vet = array(eval(input("Proximo vetor:")))
	
	
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:07:49) 
-- CODE:
from numpy import*

vet = array(eval(input("Medias finais: ")))

while(size(vet)>1):
	
	aprov = 0
	
	for elemento in vet:
		if (5 <= elemento < 7):
			aprov = aprov + 1
		
	print(aprov)
		
	vet = array(eval(input("Proximo vetor:")))
	
	
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:07:49) 
-- CODE:
from numpy import*

vet = array(eval(input("Medias finais: ")))

while(size(vet)>1):
	
	aprov = 0
	
	for elemento in vet:
		if (5 <= elemento < 7):
			aprov = aprov + 1
		
	print(aprov)
		
	vet = array(eval(input("Proximo vetor:")))
	
	
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 16:08:15) 
-- CODE:
from numpy import*

vet = array(eval(input("Medias finais: ")))

while(size(vet)>1):
	
	aprov = 0
	
	for elemento in vet:
		if (5 <= elemento < 7):
			aprov = aprov + 1
		
	print(aprov)
		
	vet = array(eval(input("Proximo vetor:")))
	
	
	


-- EXECUTION TIME:
13.1523
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
Medias finais: 6
Proximo vetor:0
Proximo vetor:3
Proximo vetor:1
Proximo vetor:
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
11
4
1
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:
5
3
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 16:08:18) 
-- CODE:
from numpy import*

vet = array(eval(input("Medias finais: ")))

while(size(vet)>1):
	
	aprov = 0
	
	for elemento in vet:
		if (5 <= elemento < 7):
			aprov = aprov + 1
		
	print(aprov)
		
	vet = array(eval(input("Proximo vetor:")))
	
	
	


-- EXECUTION TIME:
10.8407
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
6
0
3
1
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
11
4
1
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:
5
3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 16:12:20) 
-- CODE:
from numpy import*

vet = array(eval(input("Medias finais: ")))

while(size(vet)>1):
	
	aprov = 0
	
	for elemento in vet:
		if (5 <= elemento < 7):
			aprov = aprov + 1
		
	print(aprov)
		
	vet = array(eval(input("Proximo vetor:")))
	
	
	


-- EXECUTION TIME:
1.31424
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
6
0
3
1
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
11
4
1
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:
5
3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 16:13:12) 
-- CODE:
from numpy import*

vet = array(eval(input("Medias finais: ")))

while(size(vet)>1):
	aprov = 0
	
for aprovado in vet:
	if (aprovado[i] >= 5 and aprovado[i] < 7):
		aprovado = aprovado + 1
		
	print(aprovado)
		
vet = array(eval(input("Proximo vetor:")))
	
	
	


-- EXECUTION TIME:
1261.36
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 16:17:11) 
-- CODE:
from numpy import*

vet = array(eval(input("Medias finais: ")))

while(size(vet)>1):
	aprov = 0
	
for aprovado in vet:
	if (aprovado <= 5 and aprovado < 7):
		aprovado = aprovado + 1
		
	print(aprovado)
		
vet = array(eval(input("Proximo vetor:")))
	
	
	


-- EXECUTION TIME:
1431.96
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 16:17:12) 
-- CODE:
from numpy import*

vet = array(eval(input("Medias finais: ")))

while(size(vet)>1):
	aprov = 0
	
for aprovado in vet:
	if (aprovado <= 5 and aprovado < 7):
		aprovado = aprovado + 1
		
	print(aprovado)
		
	vet = array(eval(input("Proximo vetor:")))
	
	
	


-- EXECUTION TIME:
1417.45
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 16:18:03) 
-- CODE:
from numpy import*

vet = array(eval(input("Medias finais: ")))

while(size(vet)>1):
	
	aprov = 0
	
for aprovado in vet:
	if (aprovado <= 5 and aprovado < 7):
		aprovado = aprovado + 1
		
	print(aprovado)
		
vet = array(eval(input("Proximo vetor:")))
	
	
	


-- EXECUTION TIME:
1398.33
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 16:45:00) 
-- CODE:
from numpy import*

vet = array(eval(input("Medias finais: ")))

while(size(vet)>1):
	
	aprov = 0
	
	for elemento in vet:
		if (5 <= elemento < 7):
			aprov = aprov + 1
		
	print(aprov)
		
	vet = array(eval(input("Proximo vetor:")))
	
	
	


-- EXECUTION TIME:
0.891381
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
6
0
3
1
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
11
4
1
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:
5
3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 19:07:37) 
-- CODE:
from numpy import*

vet = array(eval(input("Medias finais: ")))

while(size(vet)>1):
	
	aprov = 0
	
	for elemento in vet:
		if (5 <= elemento < 7):
			aprov = aprov + 1
		
	print(aprov)
		
	vet = array(eval(input("Proximo vetor:")))
	
	
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 19:08:09) 
-- CODE:
from numpy import*

vet = array(eval(input("Medias finais: ")))

while(size(vet)>1):
	
	aprov = 0
	
	for elemento in vet:
		if (5 <= elemento < 7):
			aprov = aprov + 1
		
	print(aprov)
		
	vet = array(eval(input("Proximo vetor:")))
	
	
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 19:08:30) 
-- CODE:
from numpy import*

vet = array(eval(input("Medias finais: ")))

while(size(vet)>1):
	
	aprov = 0
	
	for elemento in vet:
		if (5 <= elemento < 7):
			aprov = aprov + 1
		
	print(aprov)
		
	vet = array(eval(input("Proximo vetor:")))
	
	
	


-- EXECUTION TIME:
1.15445
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
6
0
3
1
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
11
4
1
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:
5
3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
